k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: mini-api-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-api-frontend
  template:
    metadata:
      labels:
        app: mini-api-frontend
    spec:
      containers:
        - name: frontend
          image: mini-api-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
