k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: mini-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
